--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,2 +1,2 @@
-idf_component_register(SRCS "ble.c" "gpio.c" "util.c" "main.c" "finger.c" "util.c"
+idf_component_register(SRCS "rf.c" "ble.c" "gpio.c" "util.c" "main.c" "finger.c"
                     INCLUDE_DIRS ".")
