重构代码，增加自编码控制方式

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,2 +1,2 @@
-idf_component_register(SRCS "rf.c" "ble.c" "gpio.c" "util.c" "main.c" "finger.c"
+idf_component_register(SRCS "board.c" "beep.c" "control.c" "rf.c" "ble.c" "util.c" "main.c" "finger.c"
                     INCLUDE_DIRS ".")
